Final submission for project WDD131 - Website Porfolio

--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -75,24 +75,31 @@ body {
 
 }
 
-
+.active::before {
+    content: '📌';
+    margin-right: 8px;
+    color: white;
+    /*wayfinding symbol for the user*/
+}
 
 .navigation a {
     text-decoration: none;
-    padding: 0 5px;
-    margin: 0 10px;
-    margin-right: 40px;
+    padding: 0;
+    margin: 0 20px;
+    /* margin-right: 40px; */
     color: #fff;
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     flex: 1 1 auto;
     flex-wrap: nowrap;
+
+
 
 
 }
 
 .navigation a:focus {
     outline: 2px solid white;
-    outline-offset: 2px;
+    outline-offset: 4px;
 }
 
 .navigation a:hover {
@@ -106,10 +113,10 @@ body {
 .navigation ul {
     display: flex;
     list-style-type: none;
-    justify-content: center;
+    justify-content: space-between;
     align-content: center;
     padding: 5px 20px;
-    flex: 0 1 auto;
+    flex: 1 1 auto;
 
 
 }
@@ -131,6 +138,7 @@ body {
     max-width: 90px;
     flex: 1 0 10%;
 
+
 }
 
 #menu {
@@ -138,7 +146,7 @@ body {
     border: 0;
     position: absolute;
     top: 10px;
-    right: 50px;
+    right: 40px;
     color: whitesmoke;
     background: none;
     flex: 1 1 auto;
@@ -147,7 +155,7 @@ body {
 
 
 #menu::before {
-    content: "☰";
+    content: "X";
     /*hamburger menu icon */
 
 
@@ -155,7 +163,7 @@ body {
 }
 
 #menu.open::before {
-    content: "X";
+    content: "☰";
     /*click to go back*/
 
 
@@ -163,13 +171,13 @@ body {
 
 .open a {
     display: block;
-    color: #931621ff;
+    /* color: #931621ff; */
 
 }
 
-/* .open ul {
-    display: block;
-} */
+.open ul {
+    display: none;
+}
 
 
 /* ================== HEADER ====================== */
@@ -277,7 +285,6 @@ span#color2 {
     width: 100%;
 
 
-
 }
 
 
@@ -339,6 +346,29 @@ span#color2 {
     text-align: center;
     margin-bottom: 50px;
     color: black;
+}
+
+.bottom-section .my-company {
+    width: 100%;
+    max-width: 400px;
+    padding: 10px 0;
+    text-align: center;
+    margin-bottom: 50px;
+
+
+}
+
+.bottom-section .my-company h2 {
+    color: black;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 50px;
+
+}
+
+.bottom-section .my-company p {
+    color: black;
+    font-size: 1.5rem;
 }
 
 .bottom-section ul {
@@ -409,6 +439,11 @@ span#color2 {
 
 article {
     background-color: #eee;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+article:hover {
+    border-radius: 10px;
 }
 
 
@@ -446,25 +481,32 @@ footer {
 
 @media (min-width:501px) and (max-width: 1900px) {
 
-    .image-container #hero-logo {
-        margin-top: 200px;
-    }
-
-    .bottom-section .my-company {
-        width: 100%;
-        max-width: 400px;
-        padding: 10px 0;
-        text-align: center;
-        margin: 0 auto;
 
 
-    }
+.brand {
+    color: #931621ff;
+}
+
+.bottom-section .my-company h2 {
+    color: black;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 50px;
+
+}
+
+.bottom-section .my-company p {
+    color: black;
+    font-size: 1.5rem;
+}
+
+
 }
 
 /* Media query for SMALL window resizing range */
 @media (min-width: 311px) and (max-width: 500px) {
-    .image-container #hero-logo {
-        margin-top: 200px;
+    .my-profile h2{
+        padding: 20px 0;
     }
 
     .bottom-section .my-company {
@@ -473,10 +515,23 @@ footer {
         padding: 10px 0;
         text-align: center;
         margin: 0 auto;
-
-
     }
 
+    .bottom-section .my-company h2 {
+      color: black;
+      font-size: 1rem;
+    }
+
+    .bottom-section .my-company p {
+      color: black;
+      font-size: 0.6rem;
+    }
+
+    .navigation a {
+        font-size: 0.8rem;
+        display: flex;
+        /* flex-direction: row-reverse; */
+    }
 
 }
 
@@ -485,9 +540,45 @@ footer {
 /* ================== ABOUT MEDIA QUERIES ====================== */
 @media (min-width:501px) and (max-width: 1900px) {
 
-    .image-container #hero-pic {
+    /* .image-container #hero-pic {
         margin-top: 200px;
+    } */
+    .bottom-section .my-profile {
+        width: 100%;
+        max-width: 400px;
+        padding: 10px 0;
+        text-align: center;
+        margin: 0 auto;
+
     }
+
+    .bottom-section .my-profile p {
+        padding: 10px 0;
+        font-size: 1rem;
+
+    }
+
+    .bottom-section .my-company h2 {
+        color: black;
+        font-size: 1.7rem;
+        text-align: center;
+        margin-bottom: 50px;
+
+    }
+
+    .bottom-section .my-company p {
+        color: black;
+        font-size: 1.2rem;
+    }
+}
+
+/* Media query for SMALL window resizing range */
+@media (min-width: 311px) and (max-width: 500px)
+{
+    .image-container #hero-pic {
+            margin-top: 200px;
+    }
+
     .bottom-section .my-profile {
         width: 100%;
         max-width: 400px;
@@ -497,24 +588,19 @@ footer {
 
 
     }
-}
 
-/* Media query for SMALL window resizing range */
-@media (min-width: 311px) and (max-width: 500px)
-{
-    .image-container #hero-pic {
-            margin-top: 200px;
-        }
+    .bottom-section .my-company h2 {
+        color: black;
+        font-size: 1rem;
+        text-align: center;
+        margin-bottom: 50px;
 
-        .bottom-section .my-profile {
-            width: 100%;
-            max-width: 400px;
-            padding: 10px 0;
-            text-align: center;
-            margin: 0 auto;
+    }
 
-
-        }
+    .bottom-section .my-company p {
+        color: black;
+        font-size: 1rem;
+    }
 
 
 }
@@ -549,6 +635,9 @@ footer {
         display: flex;
         flex-direction: column;
         font-weight: bold;
+        align-items: center;
+        justify-content: center;
+
 
     }
 
@@ -619,7 +708,7 @@ footer {
 /* ================== PORTFOLIOS MEDIA QUERIES ====================== */
 
 /* Media query for LARGE window resizing range */
-@media (min-width:501px) and (max-width: 1900px) {
+@media (min-width:600px) and (max-width: 1900px) {
 
     body {
         background-color: #f4f4f4;
@@ -649,6 +738,9 @@ footer {
         box-shadow: 0 2px 4px rgba(0,0,0,0.5);
         transition: transform 0.4s ease;
         z-index: 1;
+        color: #464444;
+        font-family: Poppins, sans-serif;
+        line-height: 20px;
 
     }
 
@@ -656,7 +748,7 @@ footer {
         transform: scale(1.1);
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         z-index: 10;
-        font-size: 1rem;
+        font-size: 0.8rem;
 
     }
 
@@ -669,6 +761,7 @@ footer {
 
     .project-title {
         text-align: center;
+        font-size: 1rem;
     }
 
     .project-desc {
@@ -706,7 +799,7 @@ footer {
     .dropdown-container select {
         width: 100%;
         height: 44px;
-        font-size: 1.2rem;
+        font-size: 0.9rem;
         font-family: Roboto, Arial, sans-serif;
         border-radius: 5px;
         margin: 0 auto;
@@ -717,26 +810,52 @@ footer {
         font-size: large;
         font-weight: bold;
     }
+
+    .signup-btn {
+        display: block;
+    }
 }
 
 
 /* Media query for SMALL window resizing range */
-@media (min-width: 311px) and (max-width: 500px) {
+@media (min-width: 311px) and (max-width: 599px) {
 
     body {
         max-width: 100vw;
     }
 
     main {
-        width: 90vw;
+        width: 80vw;
         max-width: 350px;
         /* margin: auto 10px; */
     }
 
+    .navigation ul {
+        align-self: center;
+        align-content: center;
+    }
+
 
     .signup-btn {
-        display: block;
+        display: none;
     }
+
+    .project-title {
+        text-align: center;
+        font-size: 0.7rem;
+    }
+
+
+
+    .project-desc {
+        text-align: center;
+        font-size: 0.6rem;
+    }
+
+    .titlediv {
+        font-size: 1rem;
+    }
+
 
    .social-links img {
        width: 25px;
@@ -767,12 +886,14 @@ footer {
    .dropdown-container select {
        /* width: 100vw; */
        height: 44px;
-       font-size: 0.8rem;
+       font-size: 0.7rem;
        font-family: Roboto, Arial, sans-serif;
        border-radius: 5px;
        margin: 0;
        padding: 0;
-   }
+    }
+
+
 
     .portfolio-items {
         /* background-color: pink; */
@@ -792,7 +913,7 @@ footer {
         transform: scale(1.1);
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         z-index: 10;
-        font-size: 1rem;
+        font-size: 0.7rem;
 
 
     }
@@ -805,13 +926,17 @@ footer {
         margin: 10px auto;
     }
 
+    #choose {
+        font-size: 0.9rem;
+    }
+
     .project-title {
         text-align: center;
     }
 
     .project-desc {
         text-align: center;
-        font-size: 0.9rem;
+        font-size: 0.6rem;
     }
 
     .titlediv {
@@ -848,6 +973,9 @@ footer {
         max-width: 90px;
         flex: 1 0 10%;
     }
+    article .my-company p {
+        font-size: small;
+    }
 
     #results {
         font-size: medium;
@@ -863,6 +991,7 @@ footer {
         display: block;
     }
 
+
     header {
         flex-direction: column;
 
@@ -873,12 +1002,7 @@ footer {
         margin: 0 auto;
         color: whitesmoke;
     }
-   .navigation ul {
-       flex-direction: column;
-       margin-left: 30px;
 
-
-   }
 
 
     .signup-btn {
