--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -54,11 +54,14 @@ body {
 /* } */
 
 .page-wrap {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
     /* background-color: var(--dark-slate-gray); */
     background-color: #28464bff;
-
-    /* max-width: 80%; */
+    align-content: center;
+    justify-content: center;
+    max-width: 100%;
 }
 
 /* ================== NAVIGATION ====================== */
@@ -71,6 +74,7 @@ body {
     align-items: center;
     /* background-color: var(--carmine); */
     background-color: #931621ff;
+
     flex: 1 1 35%;
 
 }
@@ -141,12 +145,16 @@ body {
 
 }
 
+.signup-btn:hover {
+    background-color: #4cae4c;
+}
+
 #menu {
     font-size: 1.5rem;
     border: 0;
     position: absolute;
     top: 10px;
-    right: 40px;
+    right: 30px;
     color: whitesmoke;
     background: none;
     flex: 1 1 auto;
@@ -205,7 +213,7 @@ header {
     /* font-family: var(--primary-font); */
     font-family: Roboto, Arial, san-serif;
     margin-bottom: 10px;
-    flex-wrap: nowrap;
+    /* flex-wrap: nowrap; */
 }
 
 .logo {
@@ -504,7 +512,7 @@ footer {
 }
 
 /* Media query for SMALL window resizing range */
-@media (min-width: 311px) and (max-width: 500px) {
+@media (min-width: 399px) and (max-width: 800px) {
     .my-profile h2{
         padding: 20px 0;
     }
@@ -573,7 +581,7 @@ footer {
 }
 
 /* Media query for SMALL window resizing range */
-@media (min-width: 311px) and (max-width: 500px)
+@media (min-width: 399px) and (max-width: 800px)
 {
     .image-container #hero-pic {
             margin-top: 200px;
@@ -602,6 +610,11 @@ footer {
         font-size: 1rem;
     }
 
+    .navigation ul {
+        width: 100%;
+        max-width: 100vw;
+        flex-wrap: nowrap;
+    }
 
 }
 
@@ -654,10 +667,16 @@ footer {
 
     }
 
+        .navigation ul {
+            width: 100%;
+            max-width: 100vw;
+            flex-wrap: nowrap;
+        }
+
 }
 
 /* Media query for SMALL window resizing range */
-@media (min-width: 311px) and (max-width: 500px) {
+@media (min-width: 399px) and (max-width: 800px) {
 
     .bottom-section h2 {
             margin: 10px auto;
@@ -708,7 +727,7 @@ footer {
 /* ================== PORTFOLIOS MEDIA QUERIES ====================== */
 
 /* Media query for LARGE window resizing range */
-@media (min-width:600px) and (max-width: 1900px) {
+@media (min-width:801px) and (max-width: 1900px) {
 
     body {
         background-color: #f4f4f4;
@@ -785,6 +804,11 @@ footer {
         flex: 1 0 10%;
     }
 
+    #portfolio-btn:hover {
+        background-color: #4cae4c;
+
+    }
+
     .dropdown-container {
         display: flex;
         justify-content: center;
@@ -813,12 +837,16 @@ footer {
 
     .signup-btn {
         display: block;
+
     }
+
+
+
 }
 
 
 /* Media query for SMALL window resizing range */
-@media (min-width: 311px) and (max-width: 599px) {
+@media (min-width: 399px) and (max-width: 800px) {
 
     body {
         max-width: 100vw;
