--- a/styles/form.css
+++ b/styles/form.css
@@ -97,12 +97,12 @@ label {
 }
 
 select {
-    padding: 20px 0;
+    padding: 10px 0;
     width: 100%;
     max-width: 500px;
     height: 44px;
     font-size: 0.9rem;
-    color: #000;
+    /* color: #000; */
 }
 
 /* stars-rating */
@@ -699,7 +699,7 @@ footer {
 
     .navigation ul a {
         font-size: 1.2rem;
-        
+
 
 
     }
