--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -161,25 +161,24 @@ body {
 
 }
 
-
+/*
 #menu::before {
     content: "X";
-    /*hamburger menu icon */
+    /*hamburger menu icon
+}*/
 
 
 
-}
-
-#menu.open::before {
+/*#menu.open::before {
     content: "☰";
-    /*click to go back*/
+    /*click to go back }*/
 
 
-}
 
 .open a {
     display: block;
     /* color: #931621ff; */
+
 
 }
 
@@ -512,7 +511,7 @@ footer {
 }
 
 /* Media query for SMALL window resizing range */
-@media (min-width: 311px) and (max-width: 800px) {
+@media (min-width: 460px) and (max-width: 800px) {
     .page-wrap {
             display: flex;
             flex-direction: column;
@@ -608,7 +607,7 @@ footer {
 }
 
 /* Media query for SMALL window resizing range */
-@media (min-width: 311px) and (max-width: 800px)
+@media (min-width: 460px) and (max-width: 800px)
 {
     .image-container #hero-pic {
             margin-top: 200px;
@@ -652,24 +651,40 @@ footer {
     .bottom-section h2 {
         margin: 10px auto;
     }
+
+    #signup-form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #bed;
+        height: 230px;
+        /* background-color: #bed; */
+        align-items: center;
+        margin: 5px;
+        padding: 5px 0;
+        border-radius: 5px;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+
+    }
     .contact-section {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         width: 300px;
-        margin: 1rem auto;
-        gap: 10px;
+        height: auto;
+        gap: 20px;
         font-family: Roboto, Arial, sans-serif;
         font-size: 1rem;
-        background-color: #bed;
         align-items: center;
         margin: 5px;
-        padding: 5px 0;
-        border-radius: 5px;
-        box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+        padding: 5px;
+
     }
 
-    .contact-section label {
+
+    .contact-section div {
+        display: flex;
         margin: 5px 0;
         padding: 2px 0;
         display: flex;
@@ -703,28 +718,44 @@ footer {
 }
 
 /* Media query for SMALL window resizing range */
-@media (min-width: 311px) and (max-width: 800px) {
+@media (min-width: 460px) and (max-width: 800px) {
 
     .bottom-section h2 {
             margin: 10px auto;
         }
 
-        .contact-section {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            width: 300px;
-            margin: 1rem auto;
-            gap: 10px;
-            font-family: Roboto, Arial, sans-serif;
-            font-size: 1rem;
-            background-color: #bed;
-            align-items: center;
-            margin: 5px;
-            padding: 5px 0;
-            border-radius: 5px;
-            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-        }
+    #signup-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-top: 50px 0;
+        background-color: #bed;
+        height: 300px;
+        /* background-color: #bed; */
+        align-items: center;
+        margin: 5px;
+        padding: 5px 0;
+        border-radius: 5px;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+
+    }
+
+    .contact-section {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 300px;
+        height: auto;
+        margin: 20px auto;
+        gap: 10px;
+        font-family: Roboto, Arial, sans-serif;
+        font-size: 0.9rem;
+        align-items: center;
+        margin: 5px;
+        padding: 5px 0;
+
+    }
 
         .contact-section label {
             margin: 5px 0;
@@ -732,6 +763,31 @@ footer {
             display: flex;
             flex-direction: column;
             font-weight: bold;
+
+        }
+
+        .contact-section #submit {
+            font-family: Roboto, Arial, sans-serif;
+            padding: 10px 20px;
+            background-color: rebeccapurple;
+            color: whitesmoke;
+            border-radius: 5px;
+            margin: 20px auto;
+            height: auto;
+            max-width: 120px;
+            flex: 1 0 10%;
+
+        }
+
+        .contact-section div {
+            margin: 5px 0;
+            padding: 2px 0;
+            display: flex;
+            flex-direction: column;
+            font-weight: bold;
+            align-items: center;
+            justify-content: center;
+
 
         }
 
@@ -873,7 +929,7 @@ footer {
 
 
 /* Media query for SMALL window resizing range */
-@media (min-width: 311px) and (max-width: 800px) {
+@media (min-width: 460px) and (max-width: 800px) {
 
     body {
         max-width: 100vw;
@@ -1064,6 +1120,25 @@ footer {
         max-width: 100px;
         align-self: center;
     }
+
+}
+
+@media screen and (max-width: 460px) {
+    .navigation ul {
+        display: block;
+    }
+
+    .page-wrap {
+        display: flex;
+        flex-direction: column;
+        width: 100vw;
+        /* background-color: var(--dark-slate-gray); */
+        background-color: #28464bff;
+        align-content: center;
+        justify-content: center;
+        max-width: 100%;
+    }
+
 
 }
 
