--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -27,7 +27,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 80vw;
+    max-width: 100vw;
     margin: 0 auto;
     /* background: url('/wdd131/project/images/site-planning.webp') no-repeat center top; */
     /* background-color: var(--dark-slate-gray); */
@@ -729,7 +729,7 @@ footer {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding-top: 50px 0;
+        padding-top: 50px;
         background-color: #bed;
         height: 300px;
         /* background-color: #bed; */
