--- a/styles/form.css
+++ b/styles/form.css
@@ -679,10 +679,12 @@ footer {
 }
 
 
+
+
 }
 
 /* Media query for SMALL window resizing range */
-@media (min-width: 370px) and (max-width: 800px) {
+@media (min-width: 300px) and (max-width: 800px) {
     .my-profile h2{
         padding: 20px 0;
     }
@@ -738,6 +740,48 @@ footer {
         /* flex-direction: row-reverse; */
     }
 
+    .contact-section {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 300px;
+        height: auto;
+        gap: 20px;
+        font-family: Roboto, Arial, sans-serif;
+        font-size: 1rem;
+        align-items: center;
+        margin: 5px;
+        padding: 5px;
+
+    }
+
+
+    .contact-section div {
+        display: flex;
+        margin: 5px 0;
+        padding: 2px 0;
+        display: flex;
+        flex-direction: column;
+        font-weight: bold;
+        align-items: center;
+        justify-content: center;
+
+
+    }
+
+    .contact-section #submit {
+        font-family: Roboto, Arial, sans-serif;
+        padding: 10px 20px;
+        background-color: rebeccapurple;
+        color: whitesmoke;
+        border-radius: 5px;
+        margin: 20px auto;
+        height: auto;
+        max-width: 120px;
+        flex: 1 0 10%;
+
+    }
+
 }
 
 
@@ -778,7 +822,7 @@ footer {
 }
 
 /* Media query for SMALL window resizing range */
-@media (min-width: 370px) and (max-width: 800px)
+@media (min-width: 300px) and (max-width: 800px)
 {
     .image-container #hero-pic {
             margin-top: 200px;
@@ -873,7 +917,7 @@ footer {
 }
 
 /* Media query for SMALL window resizing range */
-@media (min-width: 370px) and (max-width: 800px) {
+@media (min-width: 300px) and (max-width: 800px) {
 
     .bottom-section h2 {
             margin: 10px auto;
@@ -1043,7 +1087,7 @@ footer {
 
 
 /* Media query for SMALL window resizing range */
-@media (min-width: 370px) and (max-width: 800px) {
+@media (min-width: 300px) and (max-width: 800px) {
 
     body {
         max-width: 100vw;
