--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -671,15 +671,39 @@ footer {
     .contact-section {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         width: 300px;
         height: auto;
-        gap: 20px;
+        gap: 5px;
         font-family: Roboto, Arial, sans-serif;
         font-size: 1rem;
         align-items: center;
-        margin: 5px;
-        padding: 5px;
+        margin: 0 auto;
+        padding: 0;
+
+
+    }
+
+    .contact-section .name-label input {
+        margin-left: 10px;
+    }
+
+    .contact-section .email-label input {
+        margin-left: 12px;
+    }
+
+    .contact-section textarea {
+        margin-left: 44px;
+
+        width: 100%;
+        /* Ensures textarea takes full width of its container */
+        max-width: 180px;
+        /* Sets a maximum width */
+        height: 40px;
+        /* Sets a height, adjust as needed */
+        resize: none;
+        /* Allows vertical resizing only */
+
 
     }
 
@@ -758,12 +782,35 @@ footer {
 
     }
 
+         .contact-section .name-label input {
+             margin-left: 0;
+         }
+
+         .contact-section .email-label input {
+             margin-left: 0;
+         }
+
         .contact-section label {
             margin: 5px 0;
             padding: 2px 0;
             display: flex;
             flex-direction: column;
             font-weight: bold;
+
+        }
+
+        .contact-section textarea {
+            margin-left: 0;
+
+            width: 100%;
+            /* Ensures textarea takes full width of its container */
+            max-width: 200px;
+            /* Sets a maximum width */
+            height: 40px;
+            /* Sets a height, adjust as needed */
+            resize: none;
+            /* Allows vertical resizing only */
+
 
         }
 
